kubernetes/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http-grafana
  selector:
    app: grafana
  sessionAffinity: None
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.2.134
  type: LoadBalancer
