kubernetes/grafana/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.tehmatt.com`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
      passHostHeader: false # set true if backend expects the original Host header
      # If your LAN backend is HTTPS, change the Service/Endpoints port to 443
      # and optionally reference a ServersTransport below to skip verify or set SNI
      # serversTransport: insecure-skipverify
    middlewares:
    - name: default-headers
      namespace: grafana
  tls:
    secretName: tehmatt-tls # TODO: change to your cert secret name
